troquei o link do insta

--- a/instagram.html
+++ b/instagram.html
@@ -7,8 +7,8 @@
     <title>Instagram</title>
 </head>
 <body>
-    <img src="imagens/tela-instagram.jpg" alt="Instagram">
-    <a href="https://www.instagram.com/gustavoguanabara" target="_blank">ACESSE</a>
+    <img src="imagens/tela-instagramlorenzo.jpg" alt="Instagram">
+    <a href="https://www.instagram.com/llorenzojjorge" target="_blank">ACESSE</a>
     
 </body>
 </html>
